syntax = "proto3";

package Aristocrat.Monaco.v1;

message Empty {
}

message LevelInfo {
	uint32 levelId = 1;
	uint64 value = 2;
}

message VolumeUpdateNotification {
	float volume = 1;
}

enum GameRoundEventType
{
	Primary = 0;
	Selection = 1;
	FreeGame = 2;
	Secondary = 3;
	NonDeterministic = 4;
	Bonus = 5;
	Jackpot = 6;
	Betting = 7;
	GameResults = 8;
	Celebration = 9;
	Present = 10;
	WaitingForPlayerInput = 11;
	AllowCashInDuringPlay = 12;
	Idle = 65535;
}

enum GameRoundPlayMode {
	Mode_Normal = 0;
	Mode_Recovery = 1;
	Mode_Replay = 2;
	Mode_Demo = 3;
	Mode_Analytics = 4;
	Mode_Uninitialized = 1000;
}	

enum GameRoundEventStage
{
	Invoked = 0;
	Begin = 1;
	Completed = 2;
	Triggered = 4;
	Pending = 8;
}

enum StorageLocation
{
	GameLocalSession = 0;
	LocalSession = 1;
	PlayerSession = 2;
	GamePlayerSession = 3;
}

enum RuntimeFlag
{
	AllowGameRound = 0;
	DisplayingRGDialog = 1;
	ValidatingBillNote = 2;
	CashingOut = 3;
	PlayTimeExpiredForceCashOut = 4;
	TimeoutImminent = 5;
	InLockup = 6;
	ReplayPause = 7;
	AutoCompleteGameRound = 8;
	AllowSubgameRound = 9;
	DisplayingTimeRemaining = 10;
	AllowReplayResume = 11;
	DisplayingVbdOverlay = 12;
	PendingHandpay = 13;
	StartSystemDrivenAutoPlay = 14;
	FundsTransferring = 15;
    ProgressiveError = 16;
	ServiceRequested = 17;
	PlatformDisableAutoPlay = 18;
	AwaitingPlayerSelection = 19;
	Class2MultipleOutcomeSpins = 20;
	AllowCombinedOutcomes = 21;
	InPlayerMenu = 22;
	InPlayerInfoDisplayMenu = 23;
	InOverlayLockup = 24;
	RequestExitGame = 25;
	GambleFeatureActive = 26;
}

enum ConfigurationTarget
{
	GameConfiguration = 0;
	MarketConfiguration = 1;
}

enum RuntimeState
{
	Initialization = 0;
	Configuration = 1;
	Configured = 2;
	Loading = 3;
	Recovery = 4;
	Replay = 5;
	Pause = 10;
	RenderOnly = 11;
	Normal = 12;
	Reconfigure = 13;
	Shutdown = 100;
	Restart = 101;
	Abort = 1000;
	Error = 1001;
}
