syntax = "proto3";

package Aristocrat.Monaco.v1;

import "presentationType.proto";
import "google/protobuf/any.proto";
import "messages.proto";

service RuntimePresentationService {
	rpc PresentOverriddenPresentation(OverriddenPresentationMessage) returns(OverriddenPresentationResponse) {}
}

message OverriddenPresentationMessage {
	repeated google.protobuf.Any overridingMessages = 1;
}

message TextPresentationMessage {
	PresentationType PresentationType = 1;
	string message = 2;
}

message OverriddenPresentationResponse {
	bool result = 1;
}